--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   width: 100%;
   height: 100%;
   background-image: url('./assets/bg.jpg');
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
   background-position: center;
   background-size: cover;
 }
@@ -23,6 +23,8 @@ main {
   align-items: center;
 }
 
+/* Header Code */
+
 header {
   width: 100%;
   padding: 16px 30px;
@@ -32,7 +34,7 @@ header {
   color: #ffffff;
 }
 
-.user-details {
+header .user-details {
   padding: 16px 0;
   text-align: center;
   display: flex;
@@ -42,8 +44,13 @@ header {
   align-items: center;
 }
 
-.user-details h2 {
+header .user-details .cta-primary {
+  margin-bottom: 30px;
+}
+
+header.user-details h2 {
   font-size: 32px;
+  word-break: break-all;
 }
 
 header h1 {
@@ -59,6 +66,8 @@ form {
   justify-content: center;
   align-items: center;
 }
+
+/* Card Code */
 
 .card {
   margin-top: 50px;
@@ -77,23 +86,19 @@ form {
   align-items: center;
   color: #ffffff;
   text-align: center;
-  overflow-y: scroll;
-  max-height: 75vh;
 }
-
+/* Card Header Code */
 .card .card-header {
   width: 100%;
-  position: fixed;
-  padding: 0 50px;
+  padding: 0 30px;
 }
 
 .card .card-header .input-group {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 32px;
+  gap: 30px;
   width: 100%;
-  margin-bottom: 30px;
 }
 
 .card .card-header .input-group label {
@@ -103,10 +108,10 @@ form {
 
 .card .card-header .input-group .cta-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 32px;
+  gap: 16px;
   width: 100%;
 }
 
@@ -118,26 +123,13 @@ form {
   transform: scale(1.05);
 }
 
-.card .card-body {
-  margin-top: 200px;
-}
+/* Add button for todos */
 
 .cta-primary.btnAddItem {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100px;
-  height: 50px;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: transparent;
-  border: none;
-  outline: none;
-  cursor: pointer;
+  width: 150px;
 }
 
+/* Button Primary Code */
 .cta-primary span {
   position: absolute;
   top: 0;
@@ -199,10 +191,7 @@ form {
   transition-delay: 0.5;
 }
 
-.input-group .cta-primary:hover::before
-
-/*lightup button*/
-  {
+.input-group .cta-primary:hover::before {
   bottom: 0;
   height: 50%;
   width: 80%;
@@ -223,10 +212,7 @@ form {
   transition-delay: 0.5;
 }
 
-.input-group .cta-primary:hover::after
-
-/*lightup button*/
-  {
+.input-group .cta-primary:hover::after {
   top: 0;
   height: 50%;
   width: 80%;
@@ -234,14 +220,15 @@ form {
 }
 
 .input-group .cta-primary:nth-child(1)::before,
-/*chnage 1*/
 .input-group .cta-primary:nth-child(1)::after {
   background: #2db2ff45;
   box-shadow: 0 0 5px #2db2ff45, 0 0 15px #2db2ff45, 0 0 30px #2db2ff45,
     0 0 60px #2db2ff45;
 }
 
+/* Card body code */
 .card .card-body {
+  margin-top: 50px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -259,10 +246,10 @@ form {
   padding: 16px;
   background-color: rgba(0, 0, 0, .2);
   border-top-left-radius: 10px;
-    border-top-right-radius: 30px;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 30px;
-    transition: all .1s ease-in-out;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 30px;
+  transition: all .1s ease-in-out;
 }
 
 .card .card-body .item:hover {
@@ -270,18 +257,21 @@ form {
 }
 
 .card .card-body .item .item-body {
-  width: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   gap: 16px;
 }
 
 .card .card-body .item .item-body .item-title {
-  width: 100%;
   text-align: left;
+  font-size: 16px;
+  width: 100%;
 }
+
+/* Checkbox Symbol Code */
 
 .check[type="checkbox"] {
   position: relative;
@@ -322,6 +312,8 @@ form {
   opacity: 1;
 }
 
+/* Text label of todo item */
+
 .item-body label {
   position: relative;
   cursor: pointer;
@@ -342,6 +334,8 @@ form {
   transition: clip-path 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
+/* Delete button code */
+
 .btnDelete,
 .btnDelete svg {
   cursor: pointer;
@@ -358,12 +352,20 @@ form {
   fill: #f44f4fcd
 }
 
+/* Style Adjustments for working on all screen sizes */
+
+/* Tablet screen sizes and larger */
 @media only screen and (min-width: 720px) {
   header {
     padding: 16px 50px;
   }
+
+  .card .card-header .input-group .cta-container {
+    flex-direction: row;
+  }
 }
 
+/* Medium desktop screen sizes and larger */
 @media only screen and (min-width: 1440px) {
   header {
     padding: 16px 12px;
